# earthquake_backend

./: CLAUDE.md  pyproject.toml
app/: demo.py  main.py
app/core/: config.py  milvus.py  minio.py  neo4j.py
app/crud/: chat.py  department.py  file_system.py  knowledge_base.py  knowledge_graph.py  milvus.py  minio.py  neo4j.py  permission.py  role.py  user.py
app/models/: __init__.py  chat.py  department.py  file_system.py  knowledge_base.py  knowledge_graph.py  permission.py  role.py  user.py
app/router/: chat.py  department.py  file_system.py  knowledge_base.py  knowledge_graph.py  permission.py  role.py  user.py
app/schemas/: chat.py  common.py  department.py  file_system.py  knowledge_base.py  knowledge_graph.py  permission.py  role.py  user.py
scripts/: seed_departments.py  seed_permissions.py  seed_roles.py  seed_users.py
