[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "deepagents>=0.4.12",
    "fastapi>=0.135.3",
    "greenlet>=3.3.2",
    "minio>=7.2.20",
    "neo4j>=6.1.0",
    "pydantic-settings>=2.13.1",
    "pymilvus>=2.6.11",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uuid6>=2025.0.1",
    "uvicorn>=0.42.0",
]
